--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.jackson.serialization.write-durations-as-timestamps=true
-logging.level.ru.yandex.practicum=debug
-spring.sql.init.mode=always
-spring.datasource.url=jdbc:h2:file:./db/filmorate
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
